# geozonal-pro

./: .gitignore  README.md  demo_quickstart.py  demo_raster.tif  demo_sampled_points.geojson  demo_zonal_out.geojson  demo_zones.geojson  fuzz_validate.py  pyproject.toml  validate_project.py
.github/workflows/: tests.yml
src/geozonal/: __init__.py  cli.py  crs.py  exceptions.py  raster.py  sampling.py  zonal.py
tests/: test_sampling.py  test_sampling_bilinear.py  test_zonal_basic.py  test_zonal_crs.py  test_zonal_edge_coverage.py  test_zonal_nodata_coverage.py  test_zonal_robust_stats.py
