[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geozonal-pro"
version = "0.1.0"
description = "Raster–Vector analytics: zonal statistics, raster sampling, nodata-aware coverage, CRS-safe workflows."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.24",
  "geopandas>=0.14",
  "rasterio>=1.3",
  "shapely>=2.0",
  "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.scripts]
geozonal = "geozonal.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/geozonal"]

[tool.hatch.build.targets.sdist]
include = ["src/geozonal", "tests", "README.md", "LICENSE", "pyproject.toml"]
